plugins {
    id "java"
    id "application"
    id "eclipse"
    id "jacoco"
    id "org.sonarqube" version "2.7"
    id "com.autonomousapps.dependency-analysis"  version "0.79.0"
}

repositories {
    mavenCentral()
}

jacoco {
    applyTo run
}

dependencies {
    implementation 'com.google.guava:guava:28.1-jre'
    implementation 'org.apache.commons:commons-collections4:4.4'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

mainClassName = 'se.anders_raberg.adventofcode2022.DaysMain'

applicationDistribution.from("$projectDir/inputs") {
    into "inputs"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
test {
	useJUnitPlatform()
}